--- a/src/pages/Authorized/authorized.scss
+++ b/src/pages/Authorized/authorized.scss
@@ -1,5 +1,28 @@
 .main {
-  position: relative;
   height: 100vh;
   width: 100vw;
+  display: grid;
+	grid-template-rows: min-content 1fr;
+	overflow: hidden;
+
+  &__content {
+    position: relative;
+  }
+
+  .window {
+    &__content {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 50;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0, 0, 0, 0.8);
+    }
+  }
 }
+
