--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -1,6 +1,126 @@
+input {
+  border: none;
+  border-bottom: 2px red;
+}
+
 .profile {
-  background: #FFFFFF;
-  box-shadow: 0px 10px 20px -5px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #FFF;
   border-radius: 10px;
-  padding: 67px 44px;
+  padding: 60px 44px;
+  width: 888px;
+  height: 588px;
+
+  &__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    color: #000000;
+    margin-bottom: 20px;
+  }
+
+  &__text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 53px;
+  }
+
+  &__right {
+    margin-right: 100px;
+  }
+  
+  &__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__label {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #828282;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid grey;
+    margin-bottom: 30px;
+  }
+
+  &__card {
+    display: flex;
+    margin-bottom: 41px;
+
+    &--info {
+      display: flex;
+    }
+    &__date {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 14px;
+      color: #000000;
+    }
+
+    &__preview {
+      font-weight: 400;
+      font-size: 21px;
+      line-height: 25px;
+      color: #000000;
+    }
+  }
+}
+
+.profile__card--info {
+
+  .profile__item {
+    margin-right: 35px;
+    margin-bottom: 0;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.card {
+  background: #FFFFFF;
+  box-shadow: 0px 5px 20px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 28px 18px;
+  width: 347px;
+  height: 182px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.card-svg {
+  mix-blend-mode: multiply;
+  position: relative;
+
+  &--two {
+    top: 54.8%;
+    z-index: 50;
+    position: absolute;
+    left: 88%;
+    mix-blend-mode: multiply;
+  }
 }
