--- a/src/pages/Authorized/authorized.scss
+++ b/src/pages/Authorized/authorized.scss
@@ -1,12 +1,14 @@
 .main {
   height: 100vh;
   width: 100vw;
-  display: grid;
-	grid-template-rows: min-content 1fr;
 	overflow: hidden;
 
   &__content {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
   }
 
   .window {
