--- a/src/components/Map/mapOrderForm.scss
+++ b/src/components/Map/mapOrderForm.scss
@@ -24,6 +24,7 @@
 
     &__form {
       border-bottom: 1px solid #E0E0E0;
+      margin-bottom: 23px;
     }
   }
 
@@ -34,7 +35,7 @@
 
   .form__content {
     width: 486px;
-    height: 471px;
+    height: 422px;
     background: #FFFFFF;
     box-shadow: 0px 10px 20px -5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -48,11 +49,13 @@
     flex-direction: column;
     align-items: stretch;
     width: 100%;
+    padding: 32px 0 33px;
 
     .price__form {
       width: 100%;
       display: flex;
       justify-content: space-evenly;
+      margin-bottom: 30px;
     }
   }
 }
@@ -66,8 +69,8 @@
     content: url(../../assets/images/round.svg);
     width: 14px;
     height: 14px;
-    top: 23px;
-    left: 5px;
+    top: 15px;
+    left: 12px;
 }
 
 .select__end {
@@ -79,8 +82,8 @@
   content: url(../../assets/images/triangle.svg);
   width: 16.5px;
   height: 16.5px;
-  top: 25px;
-  left: 5px;
+  top: 15px;
+  left: 12px;
 }
 
 .submit__button {
