--- a/src/components/Map/priceCard.scss
+++ b/src/components/Map/priceCard.scss
@@ -3,6 +3,10 @@
   box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 
+  &__info {
+    padding: 16px 0 0 12px
+  }
+
   &__title {
     font-weight: 400;
     font-size: 16px;
