--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -124,3 +124,20 @@ input {
     mix-blend-mode: multiply;
   }
 }
+
+.profile__overlay {
+  position: absolute;
+  left: 50%;top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%; height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 150;
+  background: rgba(0,0,0,0.6);
+  backdrop-filter: blur(5px);
+}
+
+.error__message {
+  font-size: 40px;
+}
