--- a/src/components/Map/priceCard.scss
+++ b/src/components/Map/priceCard.scss
@@ -2,6 +2,11 @@
   background: #FFFFFF;
   box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  opacity: 0.5;
+
+  &.active {
+    opacity: 1;
+  }
 
   &__info {
     padding: 16px 0 0 12px
