--- a/src/components/Map/priceCard.scss
+++ b/src/components/Map/priceCard.scss
@@ -2,10 +2,12 @@
   background: #FFFFFF;
   box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  cursor: pointer;
   opacity: 0.5;
 
   &.active {
     opacity: 1;
+    pointer-events: none;
   }
 
   &__info {
